# ethical-ai-checker

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUSINESS.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LAUNCH_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  app.yaml  instructions.md  main.py  pytest.ini  railway.toml  requirements.txt  seed_demo.py  send_notifications.py  test_api.sh
.github/: copilot-instructions.md
backend/: __init__.py  auth.py  compliance_certificate.py  compliance_engine.py  config.py  custom_model.py  database.py  email_service.py  evidence_analyzer.py  interview_engine.py  llm_orchestrator.py  main.py  notifications.py  prompts.py  questions.py  regulations.py  report_generator.py  response_formatter.py  risk_detector.py
demo/: workday_compliance_demo.py
docs/: architecture.html  auditing.html  business.html  cosmosai.html  testing-guide.html
frontend/: index.html
ios/: SETUP.md
ml/: ACTIVATE.md  check_data.py  collect_feedback.py  evaluate.py  generate_data.py  inference.py  optimize_questions.py  pragma_train_colab.ipynb  test_local_stack.sh  train.py
mobile/: App.tsx  app.json  package-lock.json  package.json
pragma-sdk/: CHANGELOG.md  README.md  pyproject.toml
pragma-sdk/.github/workflows/: release.yml
pragma-sdk/pragma/: __init__.py  client.py  evaluator.py  exceptions.py  types.py
pragma-sdk/pragma/providers/: openai.py
pragma-sdk/tests/: conftest.py  test_client.py  test_evaluator.py  test_types.py
tests/: USE_CASES.md  conftest.py  test_api.py  test_auth.py  test_compliance.py  test_config.py  test_custom_model.py  test_database.py  test_disparity_analysis.py  test_evidence.py  test_fintech_compliance.py  test_llm_orchestrator.py  test_notifications.py  test_orgs_and_api_keys.py  test_regulations.py  test_report_generator.py  test_response_formatter.py  test_risk_detector.py
(+21 files in other folders)
