[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pragma-sdk"
version = "0.1.0"
description = "AI compliance firewall SDK — intercepts AI decisions, evaluates them against regulatory policy, and blocks violations before they execute."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Pragma AI", email = "chak.utd@gmail.com" }]
keywords = ["ai", "compliance", "firewall", "ethics", "eu-ai-act", "eeoc", "gdpr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "pytest-cov>=4.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MLEngineer009/pragma-sdk"
Repository = "https://github.com/MLEngineer009/pragma-sdk"
"Bug Tracker" = "https://github.com/MLEngineer009/pragma-sdk/issues"
Documentation = "https://github.com/MLEngineer009/pragma-sdk#readme"
Changelog = "https://github.com/MLEngineer009/pragma-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pragma"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pragma"]
omit = ["tests/*"]
